adding note edit

--- a/src/index.css
+++ b/src/index.css
@@ -67,12 +67,31 @@ div.note button {
   font-size: 14px;
   border: none;
   padding: 0;
-  height: 14px;
 }
 
-div.note > textarea {
-  height: 75%;
+.note__form {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: end;
+  height: 100%;
+}
+
+.form__footer {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+div.note textarea {
+  height: 75% !important;
   background: rgba(255, 255, 255, .5);
+  flex-grow: 1;
+  width: 100%;
+  box-sizing: border-box;
+  border: 0;
 }
 
 div.board button {
@@ -93,6 +112,8 @@ div.board button {
 
 #save {
   background-color: #5cb85c;
+  padding: 4px;
+  width: 24px;
 }
 
 #remove {
