--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ div.board {
   background: -ms-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
   background: radial-gradient(ellipse at center, #eab92d 57%, #c79810 99%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#eab92d', endColorstr='#c79810', GradientType=1);
-
+  overflow: auto;
 }
 
 div.note {
