--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@ body {
 }
 
 div.board {
-  background-color: brown;
   width: 100%;
   height: 1000px;
   background: #eab92d;
@@ -30,7 +29,7 @@ div.board {
 
 div.note {
   height: 150px;
-  width: 150px;
+  width: 200px;
   background-color: yellow;
   margin: 2px 0;
   position: absolute;
@@ -47,6 +46,11 @@ div.note p {
   font-size: 22px;
   padding: 5px;
   font-family: "Shadows Into Light", Arial;
+  word-break: break-all;
+  overflow: auto;
+  height: 100%;
+  box-sizing: border-box;
+  margin: 0;
 }
 
 div.note:hover > span {
