--- a/src/components/Board/board.css
+++ b/src/components/Board/board.css
@@ -1,7 +1,6 @@
 .board {
   height: 100%;
   width: 100%;
-  /*height: 1000px;*/
   background: #eab92d;
   background: -moz-radial-gradient(center, ellipse cover, #eab92d 57%, #c79810 99%);
   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(57%, #eab92d), color-stop(99%, #c79810));
@@ -14,19 +13,21 @@
   overflow-x: hidden;
 }
 
-.board button {
+.board__button {
   color: #fff;
   font-size: 14px;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.55);
+  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.55);
+  border: none;
+  min-width: 50px;
 }
 
-#add {
+.board__button--add{
   background-color: #5cb85c;
   height: 3em;
   margin: 10px;
 }
 
-#clear-all {
+.board__button--clear {
   background-color: #d9534f;
   height: 3em;
   margin: 10px;
