--- a/src/components/Note/note.css
+++ b/src/components/Note/note.css
@@ -15,7 +15,7 @@
   cursor: -webkit-grabbing;
 }
 
-.note p {
+.note__content {
   font-size: 22px;
   padding: 5px;
   font-family: "Shadows Into Light", Arial;
@@ -26,11 +26,11 @@
   margin: 0;
 }
 
-.note:hover > span {
+.note:hover > .note__footer {
   opacity: 1;
 }
 
-.note > span {
+.note__footer {
   position: absolute;
   bottom: 2px;
   right: 2px;
@@ -38,7 +38,7 @@
   transition: opacity .25s linear;
 }
 
-.note button {
+.note__button {
   margin: 2px;
   color: #fff;
   font-size: 14px;
@@ -62,7 +62,7 @@
   box-sizing: border-box;
 }
 
-.note textarea {
+.note__textarea {
   height: 75% !important;
   background: rgba(255, 255, 255, .5);
   flex-grow: 1;
@@ -71,18 +71,18 @@
   border: 0;
 }
 
-.edit {
+.note__button--edit {
   background-color: #337ab7;
   padding: 4px !important;
 }
 
-.save {
+.note__button--save {
   background-color: #5cb85c;
   padding: 4px !important;
   width: 24px;
 }
 
-.remove {
+.note__button--remove {
   background-color: #d9534f;
   padding: 4px !important;
 }
